--- a/azure/storage/storage.yml
+++ b/azure/storage/storage.yml
@@ -6,14 +6,18 @@
   gather_facts: false
 
   tasks:  
-    - name: "Create or Update Azure Storage Account: {{ storage_name }} in Resource Group: {{ storage_resource_group }}"
-      azure_rm_storageaccount:
-        state: present
-        name: "{{ storage_name | mandatory }}"
-        resource_group: "{{ storage_resource_group | mandatory }}"
-        location: "{{ storage_location | mandatory }}"
-        kind: "{{ storage_kind | default('StorageV2') | mandatory }}"
-        account_type: "{{ storage_account_sku | default('Standard_LRS') | mandatory }}"        
-      register: storage_container_result
-      tags: storage
+   - name: "Create Azure Resource Group: {{ resource_group_name }}"
+     azure_rm_resourcegroup:
+       state: present
+       name: "{{ storage_resource_group }}"
+       location: "{{ storage_location }}"
+
+   - name: "Create or Update Azure Storage Account: {{ storage_name }} in Resource Group: {{ storage_resource_group }}"
+     azure_rm_storageaccount:
+       state: present
+       name: "{{ storage_name | mandatory }}"
+       resource_group: "{{ storage_resource_group | mandatory }}"
+       location: "{{ storage_location | mandatory }}"
+       kind: "{{ storage_kind | default('StorageV2') | mandatory }}"
+       account_type: "{{ storage_account_sku | default('Standard_LRS') | mandatory }}"        
       
