--- a/azure/storage/storage.yml
+++ b/azure/storage/storage.yml
@@ -3,7 +3,7 @@
 
   hosts: localhost
   connection: local
-  gather_facts: true
+  gather_facts: no
 
   tasks:  
    - name: "Create Azure Resource Group: {{ storage_resource_group }}"
