Update azure-pipelines-ansible.yml to make second job depend on the first

--- a/azure-pipelines-ansible.yml
+++ b/azure-pipelines-ansible.yml
@@ -50,6 +50,7 @@ stages:
           ansible-playbook ./azure/storage/storage.yml --extra-vars "storage_name=$(storageName) storage_resource_group=$(storageGroup) storage_location=$(storageLocation)"
         displayName: 'Run Playbook Script'
    - job: deploy_build
+     dependsOn: deploy_ansible
      pool:
        vmImage: 'windows-latest' # Currently Windows 2019 and Visual Studio 2019
      steps:
